[package]
name = "a11ywatch-web-wasm"
version = "0.1.2"
description = "a11ywatch web wasm bundle"
edition = "2021"
license = "MIT"
repository = "https://github.com/a11ywatch/web/wasm"
authors = ["Jeff Mendez <jeff@a11ywatch.com>"]

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json =  { version = "1.0.81" }
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
